# WDMPA

./: .gitignore  JETSON_PREP_PLAN.md  L2CS_TRAINING_NOTE.md  README.md  TEST_RUNS_NOTE.md  pyproject.toml  requirements.txt  results_summary.txt  training_summary.txt
configs/: train_gaze360.yaml  train_mpiigaze.yaml
deploy/: __init__.py  requirements.txt
deploy/jetson/: benchmark.py  benchmark_onnx.py  build_tensorrt.sh  export_onnx.py  memory_profiler.py  run_all_benchmarks.sh  run_all_experiments.sh  thermal_stability.py  thermal_test.py
deploy/scripts/: export_all_models.sh  export_jetson_models.sh  package_for_jetson.sh  prepare_test_dataset.sh
results/: ablation_fold7_results.csv  experiment_results.csv  wdmpa_results.csv
scripts/: check_training.sh  clean_and_restart.sh  export_experiment_data.sh  monitor_training.sh  paper_experiments.sh  retrain_baselines_conservative.sh  run_all_experiments.sh  run_experiments_foreground.sh  run_jetson_benchmark.sh  summarize_results.py  test_gaze_conversion.py  train_ablation_fold7.sh  train_wdmpa_15folds.sh
tools/: data_processing_gaze360.py  data_processing_mpii.py  eval.py  eval_degradation.py  export.py  export_ablation.py  export_all.py  train.py
tools/core/: __init__.py  data_processing_core.py
wdmpa/: __init__.py
wdmpa/data/: __init__.py  datasets.py
wdmpa/models/: __init__.py  ablation.py  wdmpa_net.py
wdmpa/models/baselines/: __init__.py  l2cs_net.py  mobilenet_gaze.py  resnet_gaze.py  shufflenet_gaze.py
wdmpa/modules/: __init__.py  awwd.py  mpa.py  star_block.py
wdmpa/utils/: __init__.py  losses.py  metrics.py
