[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wdmpa"
version = "0.1.0"
description = "WDMPA-Net: Wavelet-based Downsampling with Multi-scale Parallel Attention for Gaze Estimation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "WDMPA Team"}
]
keywords = ["gaze estimation", "deep learning", "computer vision", "wavelet", "attention"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
train = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "tensorboard>=2.13.0",
    "PyYAML>=6.0",
]
export = [
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/username/wdmpa"
Documentation = "https://github.com/username/wdmpa#readme"
Repository = "https://github.com/username/wdmpa.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["wdmpa*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104", "D105", "D107"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
